fixes home search width on mobile

--- a/app/pages/Home/index.css
+++ b/app/pages/Home/index.css
@@ -96,7 +96,10 @@
         height: var(--home-search-height);
         line-height: 40px;
         padding-left: 37px;
-        width: auto;
+        width: inherit;
+        @media (max-width: 768px) {
+          width: 100%;
+        }
       }
       & .pt-button {
         background: var(--red);
